--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,16 @@ appdirs==1.4.3
 bitshares==0.1.8
 certifi==2017.11.5
 chardet==3.0.4
+click==6.7
 ecdsa==0.13
 Events==0.3
+Flask==0.12.2
+Flask-Script==2.0.6
 graphenelib==0.5.5
 idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
 pycrypto==2.6.1
 pycryptodome==3.4.7
 pylibscrypt==1.7.1
@@ -15,3 +21,4 @@ six==1.11.0
 urllib3==1.22
 websocket-client==0.44.0
 websockets==4.0.1
+Werkzeug==0.13
