--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,46 @@
 appdirs==1.4.3
 bitshares==0.1.8
-certifi==2017.11.5
+certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+dateparser==0.6.0
+diff-match-patch==20121119
 ecdsa==0.13
 Events==0.3
 Flask==0.12.2
 Flask-Script==2.0.6
+funcy==1.9.1
 graphenelib==0.5.5
+humanize==0.5.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
+langdetect==1.0.7
 MarkupSafe==1.0
+maya==0.3.3
+pendulum==1.3.0
+pipfile==0.0.2
+prettytable==0.7.2
 pycrypto==2.6.1
 pycryptodome==3.4.7
-pylibscrypt==1.7.1
+pylibscrypt==1.6.1
+python-dateutil==2.6.1
+pytz==2017.2
+pytzdata==2017.2.2
+regex==2017.9.23
 requests==2.18.4
+ruamel.yaml==0.15.34
 scrypt==0.8.0
 six==1.11.0
+steem==0.18.103
+stripe==1.77.0
+toml==0.9.3
+toolz==0.8.2
+tzlocal==1.4
+ujson==1.35
 urllib3==1.22
+voluptuous==0.10.5
+w3lib==1.18.0
 websocket-client==0.44.0
 websockets==4.0.1
 Werkzeug==0.13
