--- a/requirements.txt
+++ b/requirements.txt
@@ -32,12 +32,14 @@ pycryptodome==3.4.7
 pylibscrypt==1.6.1
 PyMySQL==0.8.0
 python-dateutil==2.6.1
+python-http-client==3.0.0
 pytz==2017.2
 pytzdata==2017.2.2
 regex==2017.9.23
 requests==2.18.4
 ruamel.yaml==0.15.34
 scrypt==0.8.0
+sendgrid==5.3.0
 six==1.11.0
 SQLAlchemy==1.1.15
 steem==0.18.103
