--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pycryptodome==3.4.7
 pylibscrypt==1.6.1
 PyMySQL==0.8.0
 python-dateutil==2.6.1
+python-dotenv==0.7.1
 python-http-client==3.0.0
 pytz==2017.2
 pytzdata==2017.2.2
