--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+APScheduler==3.5.1
 bitshares==0.1.8
 certifi==2017.7.27.1
 chardet==3.0.4
@@ -9,6 +10,7 @@ dominate==2.3.1
 ecdsa==0.13
 Events==0.3
 Flask==0.12.2
+Flask-APScheduler==1.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-MySQL==1.4.0
 Flask-Script==2.0.6
