--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 appdirs==1.4.3
 APScheduler==3.5.1
-bitshares==0.1.8
-certifi==2017.7.27.1
+beem==0.20.7
+certifi==2018.10.15
 chardet==3.0.4
-click==6.7
+Click==7.0
 dateparser==0.6.0
 diff-match-patch==20121119
 dominate==2.3.1
 ecdsa==0.13
 Events==0.3
-Flask==0.12.2
+Flask==1.0.2
 Flask-APScheduler==1.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-MySQL==1.4.0
@@ -17,9 +17,10 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 funcy==1.9.1
+future==0.16.0
 graphenelib==0.5.5
 humanize==0.5.1
-idna==2.6
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 langdetect==1.0.7
@@ -31,31 +32,32 @@ pipfile==0.0.2
 prettytable==0.7.2
 pycrypto==2.6.1
 pycryptodome==3.4.7
-pylibscrypt==1.6.1
+pycryptodomex==3.6.6
+pylibscrypt==1.7.1
 PyMySQL==0.8.0
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 python-http-client==3.0.0
-pytz==2017.2
+pytz==2018.5
 pytzdata==2017.2.2
 regex==2017.9.23
-requests==2.18.4
+requests==2.20.0
 ruamel.yaml==0.15.34
-scrypt==0.8.0
+scrypt==0.8.6
 sendgrid==5.3.0
 six==1.11.0
 SQLAlchemy==1.1.15
-steem==0.18.103
+steem==1.0.1
 stripe==1.77.0
-toml==0.9.3.1
+toml==0.9.3
 toolz==0.8.2
 tzlocal==1.4
 ujson==1.35
-urllib3==1.22
+urllib3==1.24
 visitor==0.1.3
 voluptuous==0.10.5
 w3lib==1.18.0
-websocket-client==0.44.0
+websocket-client==0.53.0
 websockets==4.0.1
 Werkzeug==0.13
 WTForms==2.1
