--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ dateparser==0.6.0
 diff-match-patch==20121119
 dominate==2.3.1
 ecdsa==0.13
+entrypoints==0.3
 Events==0.3
-Flask==1.0.2
+flake8==3.7.7
+Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-MySQL==1.4.0
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 funcy==1.9.1
 future==0.16.0
@@ -20,17 +22,20 @@ graphenelib==0.5.5
 humanize==0.5.1
 idna==2.7
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2==2.10.1
 langdetect==1.0.7
 MarkupSafe==1.0
 maya==0.3.3
+mccabe==0.6.1
 mysqlclient==1.3.12
 pendulum==1.3.0
 pipfile==0.0.2
 prettytable==0.7.2
+pycodestyle==2.5.0
 pycrypto==2.6.1
 pycryptodome==3.4.7
 pycryptodomex==3.6.6
+pyflakes==2.1.1
 pylibscrypt==1.7.1
 PyMySQL==0.8.0
 python-dateutil==2.6.1
@@ -44,17 +49,18 @@ ruamel.yaml==0.15.34
 scrypt==0.8.6
 sendgrid==5.3.0
 six==1.11.0
-SQLAlchemy==1.1.15
+SQLAlchemy==1.3.0
 steem==1.0.1
 stripe==1.77.0
+toml==0.10.0
 toolz==0.8.2
 tzlocal==1.4
 ujson==1.35
-urllib3==1.24
+urllib3==1.24.2
 visitor==0.1.3
 voluptuous==0.10.5
 w3lib==1.18.0
 websocket-client==0.53.0
 websockets==4.0.1
-Werkzeug==0.14.1
+Werkzeug==0.15.4
 WTForms==2.1
